FIX: reddit contact icon urls

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <a href="https://www.freecodecamp.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-free-code-camp fa-2x sr-contact"></i></a>
           <a href="https://www.duome.eu/ingochris" target="_blank" rel="noopener"><i class="fa fa-language fa-2x sr-contact"></i></a>
           <a class="js-scroll-trigger" href="#contact"><i class="fa fa-envelope fa-2x sr-contact"></i></a>
-          <a href="https://freecodecamp.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-reddit-alien fa-2x sr-contact"></i></a>
+          <a href="https://www.reddit.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-reddit-alien fa-2x sr-contact"></i></a>
           <a href="https://www.twitter.com/ingochristech" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x sr-contact"></i></a>
         </div>
          <!---<a class="btn btn-primary btn-xl js-scroll-trigger" href="#Development">Find Out More</a>-->
@@ -1052,7 +1052,7 @@
                 <a href="https://www.instagram.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-instagram fa-2x sr-contact"></i></a>
                 <a href="https://www.freecodecamp.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-free-code-camp fa-2x sr-contact"></i></a>
                 <a href="https://www.duome.eu/ingochris" target="_blank" rel="noopener"><i class="fa fa-language fa-2x sr-contact"></i></a>
-                <a href="https://freecodecamp.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-reddit-alien fa-2x sr-contact"></i></a>
+                <a href="https://www.reddit.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-reddit-alien fa-2x sr-contact"></i></a>
                 <a href="https://www.twitter.com/ingochristech" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x sr-contact"></i></a>
               </div>
               <div class="col-lg-7 mx-auto text-center">
