UPDATE: section class mb-4

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 
     </section>
 
-    <section class="bg-dark text-white" id="Education">
+    <section class="bg-dark text-white pb-4" id="Education">
 
       <div class="container col-lg-10 text-center">
 
@@ -1002,7 +1002,7 @@
       </div>
     </section>
 
-    <section class="bg-primary" id="Kinesiology">
+    <section class="bg-primary pb-4" id="Kinesiology">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
