ADD: empire to education; MV: blue team to fort awesome

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-empire text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-fort-awesome text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Blue Team</h3>
               <p class="text-muted mb-0">Ensure safety, verify defensive measures, and make certain of persistent effectiveness</p>
             </div>
@@ -624,24 +624,28 @@
 
                     <div class="col-lg-3 text-center">
                         <!-- 7 lines in a lg-4 col -->
+                        <i class="fa fa-4x fa-empire text-primary mb-3 sr-icons"></i>
                         <p>42 University of Silicon Valley<br>Fremont, California</p>
                         <p class="text-faded">Computer Science</p>
                     </div>
 
                     <div class="col-lg-3 text-center">
                         <!-- 9 lines in a lg-4 col -->
+                        <i class="fa fa-4x fa-empire text-primary mb-3 sr-icons"></i>
                         <p>Cisco Network Academy<br>Santa Clara, California</p>
                         <p class="text-faded">Cyber Ops, Routing & Switching</p>
                     </div>
 
                     <div class="col-lg-3 text-center">
                         <!-- 8 lines in a lg-4 col -->
+                        <i class="fa fa-4x fa-empire text-primary mb-3 sr-icons"></i>
                         <p>Rochester Institute of Technology <span class="small-drop"></span>RITx</p>
                         <p class="text-faded">Cybersecurity</p>
                     </div>
 
                     <div class="col-lg-3 text-center">
                         <!-- 9 lines in a lg-4 col -->
+                        <i class="fa fa-4x fa-empire text-primary mb-3 sr-icons"></i>
                         <p>Mission College<br>Santa Clara, California</p>
                         <p class="text-faded">Ethical Hacking, Kinesiology</p>
                     </div>
