--- a/index.html
+++ b/index.html
@@ -952,6 +952,14 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>OST008</td>
+                        <td>Introduction to Cellular Security</td>
+                        <td>Open Security Training</td>
+                        <td>
+                            <g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>SL1024</td>
                         <td>JavaScript</td>
                         <td>SoloLearn</td>
