--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
       </div>
 
       <div class="container col-lg-12 text-center">
-        <h3 class="my-4">Relevant Coursework</h3>
+        <h3 class="my-4">Select Coursework</h3>
       </div>
 <!--        <a class="btn btn-light btn-xl sr-button" href="https://devpost.com/ingochris">Devpost Portfolio</a>-->
         <div class="no-margin">
