ADD: footer icons

--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,20 @@
       </div>
       </div>
     </section>
-      <div class="text-center"><p>© Christopher Ngo, 2006-<script>new Date().getFullYear()>document.write(new Date().getFullYear());</script>. All rights reserved. Unathorized use prohibited.</p></div>
+
+      <div class="text-center">
+        <div class="about-icons">              
+          <a href="https://www.linkedin.com/in/ingochris" target="_blank" rel="noopener"><i class="fa fa-linkedin fa-2x sr-contact"></i></a>
+          <a href="https://www.github.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-github fa-2x sr-contact"></i></a>
+          <a href="https://www.instagram.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-instagram fa-2x sr-contact"></i></a>
+          <a href="https://www.freecodecamp.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-free-code-camp fa-2x sr-contact"></i></a>
+          <a href="https://www.duome.eu/ingochris" target="_blank" rel="noopener"><i class="fa fa-language fa-2x sr-contact"></i></a>
+          <a class="js-scroll-trigger" href="#contact"><i class="fa fa-envelope fa-2x sr-contact"></i></a>
+          <a href="https://www.reddit.com/u/ingochris" target="_blank" rel="noopener"><i class="fa fa-reddit-alien fa-2x sr-contact"></i></a>
+          <a href="https://www.twitter.com/ingochristech" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x sr-contact"></i></a>
+        </div>
+        <p>© Christopher Ngo, 2006-<script>new Date().getFullYear()>document.write(new Date().getFullYear());</script>. All rights reserved. Unathorized use prohibited.</p>
+      </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
