--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
           <a href="https://www.reddit.com/u/ingochris" target="_blank" rel="noopener"><i class="fa fa-reddit-alien fa-2x sr-contact"></i></a>
           <a href="https://www.twitter.com/ingochristech" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x sr-contact"></i></a>
         </div>
-        <p>© Christopher Ngo, 2006-<script>new Date().getFullYear()>document.write(new Date().getFullYear());</script>. All rights reserved. Unathorized use prohibited.</p>
+        <p>© <script>new Date().getFullYear()>document.write(new Date().getFullYear());</script> Christopher Ngo. All Rights Reserved. Unathorized Use Prohibited.</p>
       </div>
 
     <!-- Bootstrap core JavaScript -->
