|  OST013 | Offensive, Defensive, and Forensic Web User Identification  | Open Security Training | ✔️ |

--- a/index.html
+++ b/index.html
@@ -963,6 +963,14 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>OST013</td>
+                        <td>Offensive, Defensive, and Forensic Web User Identification</td>
+                        <td>Open Security Training</td>
+                        <td>
+                            <g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>SL1024</td>
                         <td>JavaScript</td>
                         <td>SoloLearn</td>
