--- a/index.html
+++ b/index.html
@@ -142,12 +142,11 @@
           </div>
         </div>
       </div>
+
     </header>
 
-    <span id="instafeed" class="mx-auto"></span>
+    <section id="Security my-100">
 
-
-    <section id="Security">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -1061,6 +1060,8 @@
           </div>
         </div>
       </div>
+                <span id="instafeed" class="mx-auto"></span>
+
     </section>
 
       <section id="Contact">
@@ -1116,6 +1117,7 @@
 
                   <iframe width=100% height="430" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJTXpXwkK-j4AR9EJzWafCFvs&key=AIzaSyASt7PEEOUf2msM189jzd1EAeBTS5a8dhY" allowfullscreen></iframe>
               </div>
+
             </div>
           </div>
         </div>
