UPDATE: localize instafeedjs lib

--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/instafeed.js/1.4.1/instafeed.min.js"></script>
+    <script src="vendor/instafeed.js-1.4.1/instafeed.min.js"></script>
 
 
     <!-- Plugin JavaScript -->
