--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <a href="https://www.linkedin.com/in/ingochris" target="_blank" rel="noopener"><i class="fa fa-linkedin fa-2x sr-contact"></i></a>
           <a href="https://www.github.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-github fa-2x sr-contact"></i></a>
           <a href="https://www.instagram.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-instagram fa-2x sr-contact"></i></a>
-          <a href="https://www.freecodecamp.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-free-code-camp fa-2x sr-contact"></i></a>
+          <a href="https://www.freecodecamp.com/portfolio/ingochris" target="_blank" rel="noopener"><i class="fa fa-free-code-camp fa-2x sr-contact"></i></a>
           <a href="https://www.duome.eu/ingochris" target="_blank" rel="noopener"><i class="fa fa-language fa-2x sr-contact"></i></a>
           <a class="js-scroll-trigger" href="#contact"><i class="fa fa-envelope fa-2x sr-contact"></i></a>
           <a href="https://www.reddit.com/u/ingochris" target="_blank" rel="noopener"><i class="fa fa-reddit-alien fa-2x sr-contact"></i></a>
@@ -1074,7 +1074,7 @@
                 <a href="https://www.linkedin.com/in/ingochris" target="_blank" rel="noopener"><i class="fa fa-linkedin fa-2x sr-contact"></i></a>
                 <a href="https://www.github.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-github fa-2x sr-contact"></i></a>
                 <a href="https://www.instagram.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-instagram fa-2x sr-contact"></i></a>
-                <a href="https://www.freecodecamp.com/ingochris" target="_blank" rel="noopener"><i class="fa fa-free-code-camp fa-2x sr-contact"></i></a>
+                <a href="https://www.freecodecamp.com/portfolio/ingochris" target="_blank" rel="noopener"><i class="fa fa-free-code-camp fa-2x sr-contact"></i></a>
                 <a href="https://www.duome.eu/ingochris" target="_blank" rel="noopener"><i class="fa fa-language fa-2x sr-contact"></i></a>
                 <a href="https://www.reddit.com/u/ingochris" target="_blank" rel="noopener"><i class="fa fa-reddit-alien fa-2x sr-contact"></i></a>
                 <a href="https://www.twitter.com/ingochristech" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x sr-contact"></i></a>
