--- a/index.html
+++ b/index.html
@@ -15,10 +15,20 @@
     <meta property="og:url" content="https://www.ingochris.tech">
 
     <title>Christopher Ngo</title> 
-<!--<link rel="icon" href="img/favicon.ico" type="image/x-icon">-->
+    <!--<link rel="icon" href="img/favicon.ico" type="image/x-icon">-->
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120462352-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-120462352-1');
+    </script>
+    
   </head>
 
 
